fix(style): card content alignment

--- a/products/product.css
+++ b/products/product.css
@@ -2,36 +2,18 @@
 	border-right: 1px solid var(--light-gray);
 }
 
-.card {
-	/* max-width: 40rem; */
-}
-
-.divider {
-	width: 100%;
-	height: 0.2px;
+.card-badge-bg {
 	background-color: var(--light-gray);
-	margin: 2rem 0;
-}
-
-.filters {
-	position: sticky;
-	top: 8.5rem;
-	left: 0;
-	width: 28rem;
-	min-width: 28rem;
-	height: calc(100vh - 8rem);
-	overflow: auto;
 }
 
 .products {
-	width: 100%;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(28rem, 30rem));
 	justify-content: center;
 }
 
-@media screen and (max-width: 1024px) {
-	.filters {
-		display: none;
+@media screen and (max-width: 769px) {
+	.products {
+		grid-template-columns: 1fr 1fr;
 	}
 }
